--- a/package.json
+++ b/package.json
@@ -12,16 +12,28 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --ext js --ext jsx"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.2.2",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/styles": "^4.11.4",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "gatsby": "^3.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.3.0",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-manifest": "^3.3.0",
-    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-root-import": "^2.0.6",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-plugin-typescript": "^3.3.0",
@@ -31,6 +43,13 @@
     "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "zustand": "^3.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.26.0",
+    "eslint-webpack-plugin": "^2.5.4",
+    "gatsby-plugin-eslint": "^3.0.0",
+    "prettier": "^2.2.1"
   }
 }
