--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es6",
+        "module": "esnext",
+        "target": "esnext",
         "jsx": "preserve",
         "lib": [
             "dom",
             "es2015",
-            "es2017"
+            "es2017",
         ],
         "strict": true,
         "noEmit": true,
@@ -16,9 +16,26 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "removeComments": false,
-        "preserveConstEnums": true
+        "preserveConstEnums": true,
+        "allowJs": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "declaration": true,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node",
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "pretty": true,
+        "resolveJsonModule": true,
+        "skipDefaultLibCheck": false,
+        "experimentalDecorators": true,
     },
     "include": [
         "./src/**/*"
+, "assets", "config", ".cache/config", "./type.d.ts", "plugins"    ],
+    "exclude": [
+        "node_modules",
+        "public",
+        ".cache"
     ]
 }
