Theme Customizations palette and type customizations

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-hooks-form": "^2.0.1",
     "zustand": "^3.5.0"
   },
   "devDependencies": {
