--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
   "trailingComma": "all",
   "printWidth": 100,
   "jsxBracketSameLine": false,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "useTabs": false
 }
