add seo component

--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "description": "Harmindera International",
   "author": "Parmeet Singh",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "Harmindera International",
+    "Auto Part Manufacturer",
+    "Flange Manufacturer in Ludhiana",
+    "Nuts and Bolts Manufacturer",
+    "Bolts Manufacturer",
+    "Forging",
+    "Manufacturer in Ludhiana",
+    "Agriculture Parts Manufacturer in Ludhiana"
   ],
   "scripts": {
     "develop": "gatsby develop",
-    "develop:network":"gatsby develop -H 0.0.0.0 -p 8000",
+    "develop:network": "gatsby develop -H 0.0.0.0 -p 8000",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -35,11 +43,13 @@
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-plugin-typescript": "^3.3.0",
     "gatsby-source-contentful": "^5.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.3.0",
+    "gsap": "^3.7.0",
     "immer": "^9.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
