--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-items-carousel": "^2.8.0",
+    "react-scroll": "^1.8.4",
     "swiper": "^7.4.1",
     "typewriter-effect": "^2.18.2",
     "zustand": "^3.5.0"
