integrate react-hook-form into contact-us form

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.25.3",
     "react-items-carousel": "^2.8.0",
     "react-scroll": "^1.8.4",
     "swiper": "^7.4.1",
