--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fontsource/poppins": "^4.2.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "@svgr/webpack": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
