--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@svgr/webpack": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.28.1",
+    "babel-plugin-styled-components": "^2.0.2",
     "clsx": "^1.1.1",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.2.1",
@@ -45,6 +46,7 @@
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-plugin-styled-components": "^5.6.0",
     "gatsby-plugin-typescript": "^3.3.0",
     "gatsby-source-contentful": "^5.3.0",
     "gatsby-source-filesystem": "^3.3.0",
@@ -58,6 +60,7 @@
     "react-items-carousel": "^2.8.0",
     "react-query": "^3.34.12",
     "react-scroll": "^1.8.4",
+    "styled-components": "^5.3.3",
     "swiper": "^7.4.1",
     "typewriter-effect": "^2.18.2",
     "zustand": "^3.5.0"
