Update company's name to the new version

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "harmindera-international",
   "version": "1.0.0",
   "private": true,
-  "description": "Harmindera International",
+  "description": "Harmindra International",
   "author": "Parmeet Singh",
   "keywords": [
     "gatsby",
-    "Harmindera International",
+    "Harmindra International",
     "Auto Part Manufacturer",
     "Flange Manufacturer in Ludhiana",
     "Nuts and Bolts Manufacturer",
