Fix: Update CMS config

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,6 @@
 GATSBY_IP_KEY = ax50gox3cmp2ns5t
 GATSBY_WEBSITE_URL=http://localhost:8000/
+CONTENTFUL_SPACE_ID = "us6zmzxpvi4f"
+CONTENTFUL_ACCESS_TOKEN = "vUl3nNZyNQUTK5Fts6IChSp_261n75TdLZvmM1scf9I"
+OLD_CONTENTFUL_ACCESS_TOKEN = "Xg-7MV82KJiO4-daF2WTpR1baGCjd1d6W4p3FpOp1iU"
+
